@@ -71,3 +71,4 @@ v<0.3.4>, <09/06/2023> -- Added RANK for OD ranking
 v<0.3.4>, <09/07/2023> -- Added Rankings to docs
 v<0.3.4>, <09/08/2023> -- Updated GNBC model for meta
 v<0.3.5>, <10/29/2023> -- Upgraded RANK and docs
+v<0.3.5>, <11/02/2023> -- Added CONF for OD confidence evaluation
